--- a/benchmarks/tests/CMakeLists.txt
+++ b/benchmarks/tests/CMakeLists.txt
@@ -1,6 +1,3 @@
-find_package(GTest REQUIRED)
-include(GoogleTest)
-
 list(APPEND TESTS scan_tests spmv_tests)
 
 get_filename_component(PARENT_DIR ../ ABSOLUTE)
@@ -11,17 +8,17 @@ foreach(test IN LISTS TESTS)
   # serial
   add_executable(${test}_SERIAL ${test}.cpp)
   target_compile_definitions(${test}_SERIAL PRIVATE SERIAL=1)
-  target_link_libraries(${test}_SERIAL gtest GTest::Main)
+  target_link_libraries(${test}_SERIAL gtest GTest::gtest_main)
   # openmp
   foreach(mode IN LISTS OMP_MODES)
       add_executable(${test}_${mode} ${test}.cpp)
       target_compile_definitions(${test}_${mode} PRIVATE OMP_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest GTest::Main OpenMP::OpenMP_CXX)
+      target_link_libraries(${test}_${mode} gtest GTest::gtest_main OpenMP::OpenMP_CXX)
   endforeach()
   # tbb
   foreach(mode IN LISTS TBB_MODES)
       add_executable(${test}_${mode} ${test}.cpp)
       target_compile_definitions(${test}_${mode} PRIVATE TBB_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest GTest::Main TBB::tbb)
+      target_link_libraries(${test}_${mode} gtest GTest::gtest_main TBB::tbb)
   endforeach()
 endforeach()
