--- a/benchmarks/tests/CMakeLists.txt
+++ b/benchmarks/tests/CMakeLists.txt
@@ -8,17 +8,17 @@ foreach(test IN LISTS TESTS)
   # serial
   add_executable(${test}_SERIAL ${test}.cpp)
   target_compile_definitions(${test}_SERIAL PRIVATE SERIAL=1)
-  target_link_libraries(${test}_SERIAL gtest GTest::gtest_main)
+  target_link_libraries(${test}_SERIAL gtest ${GTEST_MAIN_LIBRARIES})
   # openmp
   foreach(mode IN LISTS OMP_MODES)
       add_executable(${test}_${mode} ${test}.cpp)
       target_compile_definitions(${test}_${mode} PRIVATE OMP_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest GTest::gtest_main OpenMP::OpenMP_CXX)
+      target_link_libraries(${test}_${mode} gtest ${GTEST_MAIN_LIBRARIES} OpenMP::OpenMP_CXX)
   endforeach()
   # tbb
   foreach(mode IN LISTS TBB_MODES)
       add_executable(${test}_${mode} ${test}.cpp)
       target_compile_definitions(${test}_${mode} PRIVATE TBB_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest GTest::gtest_main TBB::tbb)
+      target_link_libraries(${test}_${mode} gtest ${GTEST_MAIN_LIBRARIES} TBB::tbb)
   endforeach()
 endforeach()
