--- a/scheduling_time/CMakeLists.txt
+++ b/scheduling_time/CMakeLists.txt
@@ -35,19 +35,26 @@ endif()
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps=obj")
 
 # benchmarks:
-list(APPEND OMP_MODES OMP_STATIC OMP_DYNAMIC OMP_GUIDED OMP_RUNTIME)
+list(APPEND OMP_MODES OMP_STATIC_MONOTONIC OMP_STATIC_NONMONOTONIC
+  OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
+  OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
+  OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
 list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY)
 
-# openmp
-foreach(mode IN LISTS OMP_MODES)
-  add_executable(bench_scheduling_${mode}_${scheduling_measure_mode} bench_scheduling.cpp)
-  target_compile_definitions(bench_scheduling_${mode}_${scheduling_measure_mode} PRIVATE OMP_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
-  target_link_libraries(bench_scheduling_${mode}_${scheduling_measure_mode} OpenMP::OpenMP_CXX)
+
+foreach(scheduling_measure_mode IN LISTS SCHEDULING_MEASURE_MODES)
+  # openmp
+  foreach(mode IN LISTS OMP_MODES)
+      add_executable(bench_scheduling_${mode}_${scheduling_measure_mode} bench_scheduling.cpp)
+      target_compile_definitions(bench_scheduling_${mode}_${scheduling_measure_mode} PRIVATE OMP_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
+      target_link_libraries(bench_scheduling_${mode}_${scheduling_measure_mode} OpenMP::OpenMP_CXX)
+  endforeach()
+  # tbb
+  foreach(mode IN LISTS TBB_MODES)
+      add_executable(bench_scheduling_${mode}_${scheduling_measure_mode} bench_scheduling.cpp)
+      target_compile_definitions(bench_scheduling_${mode}_${scheduling_measure_mode} PRIVATE TBB_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
+      target_link_libraries(bench_scheduling_${mode}_${scheduling_measure_mode} TBB::tbb)
+  endforeach()
 endforeach()
-# tbb
-foreach(mode IN LISTS TBB_MODES)
-  add_executable(bench_scheduling_${mode}_${scheduling_measure_mode} bench_scheduling.cpp)
-  target_compile_definitions(bench_scheduling_${mode}_${scheduling_measure_mode} PRIVATE TBB_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
-  target_link_libraries(bench_scheduling_${mode}_${scheduling_measure_mode} TBB::tbb)
-endforeach()
+
 
