remove monotonic for static

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -69,7 +69,7 @@ option(USE_SANITIZERS "Enable to build with undefined,leak and address sanitizer
 
 
 # benchmarks:
-list(APPEND OMP_MODES OMP_STATIC_MONOTONIC OMP_STATIC_NONMONOTONIC
+list(APPEND OMP_MODES OMP_STATIC
   OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
   OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
   OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
