--- a/scheduling_dist/CMakeLists.txt
+++ b/scheduling_dist/CMakeLists.txt
@@ -7,7 +7,7 @@ project(composable-parallel-scheduler)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD 17)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fopenmp -fopenmp-version=50")
 
 
 message(STATUS "Compiler path: ${CMAKE_CXX_COMPILER}")
@@ -40,22 +40,21 @@ option(USE_SANITIZERS "Enable to build with undefined,leak and address sanitizer
 
 
 # benchmarks:
-list(APPEND OMP_MODES OMP_STATIC_MONOTONIC OMP_STATIC_NONMONOTONIC
+list(APPEND OMP_MODES OMP_STATIC
     OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
     OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
     OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
 list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY)
-list(APPEND SCHEDULING_MEASURE_MODES SLEEP BARRIER MULTITASK)
 
 # openmp
 foreach(mode IN LISTS OMP_MODES)
-  add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
-  target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE OMP_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
-  target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} OpenMP::OpenMP_CXX)
+  add_executable(scheduling_dist_${mode} scheduling_dist.cpp)
+  target_compile_definitions(scheduling_dist_${mode} PRIVATE OMP_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
+  target_link_libraries(scheduling_dist_${mode} OpenMP::OpenMP_CXX)
 endforeach()
 # tbb
 foreach(mode IN LISTS TBB_MODES)
-  add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
-  target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE TBB_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
-  target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} TBB::tbb)
+  add_executable(scheduling_dist_${mode} scheduling_dist.cpp)
+  target_compile_definitions(scheduling_dist_${mode} PRIVATE TBB_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
+  target_link_libraries(scheduling_dist_${mode} TBB::tbb)
 endforeach()
