--- a/scheduling_time/CMakeLists.txt
+++ b/scheduling_time/CMakeLists.txt
@@ -35,12 +35,12 @@ endif()
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps=obj")
 
 # benchmarks:
-list(APPEND OMP_MODES OMP_STATIC_MONOTONIC OMP_STATIC_NONMONOTONIC
+list(APPEND OMP_MODES OMP_STATIC
   OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
   OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
   OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
 list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY)
-
+list(APPEND SCHEDULING_MEASURE_MODES SLEEP BARRIER MULTITASK)
 
 foreach(scheduling_measure_mode IN LISTS SCHEDULING_MEASURE_MODES)
   # openmp
