add rapid start bench

--- a/scheduling_dist/CMakeLists.txt
+++ b/scheduling_dist/CMakeLists.txt
@@ -48,7 +48,7 @@ list(APPEND OMP_MODES OMP_STATIC
     OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
     OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
     OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
-list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY)
+list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY TBB_RAPID)
 list(APPEND SCHEDULING_MEASURE_MODES SLEEP BARRIER MULTITASK)
 
 foreach(scheduling_measure_mode IN LISTS SCHEDULING_MEASURE_MODES)
