--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -79,7 +79,7 @@ list(APPEND OMP_MODES OMP_STATIC
   OMP_DYNAMIC_MONOTONIC OMP_DYNAMIC_NONMONOTONIC
   OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
   OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
-list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY)
+list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY TBB_RAPID)
 # TODO: add rapid start proof of concept for TBB
 
 list(APPEND BENCHMARKS bench_spmv_balanced bench_spmv_unbalanced bench_reduce bench_scan)
@@ -100,6 +100,10 @@ foreach(bench IN LISTS BENCHMARKS)
         target_compile_definitions(${bench}_${mode} PRIVATE TBB_MODE=${mode})
         target_link_libraries(${bench}_${mode} benchmark::benchmark TBB::tbb)
     endforeach()
+    # eigen
+    add_executable(${bench}_EIGEN ${bench}.cpp)
+    target_compile_definitions(${bench}_EIGEN PRIVATE EIGEN_MODE=1)
+    target_link_libraries(${bench}_EIGEN benchmark::benchmark OpenMP::OpenMP_CXX)
 endforeach()
 
 if (ENABLE_TESTS)
