avoid omp usage in eigen, because omp_proc_bind affects std::thread too

--- a/scheduling_dist/CMakeLists.txt
+++ b/scheduling_dist/CMakeLists.txt
@@ -69,6 +69,6 @@ foreach(scheduling_measure_mode IN LISTS SCHEDULING_MEASURE_MODES)
   foreach(mode IN LISTS EIGEN_MODES)
       add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
       target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE EIGEN_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
-      target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} OpenMP::OpenMP_CXX TBB::tbb)
+      target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} TBB::tbb)
   endforeach()
 endforeach()
