basic timespan partitioner and use main thread in eigen pool

--- a/scheduling_dist/CMakeLists.txt
+++ b/scheduling_dist/CMakeLists.txt
@@ -58,17 +58,29 @@ foreach(scheduling_measure_mode IN LISTS SCHEDULING_MEASURE_MODES)
       add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
       target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE OMP_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
       target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} OpenMP::OpenMP_CXX)
+      if (USE_SANITIZERS)
+        target_compile_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+        target_link_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak)
+      endif()
   endforeach()
   # tbb
   foreach(mode IN LISTS TBB_MODES)
       add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
       target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE TBB_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
       target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} TBB::tbb)
+      if (USE_SANITIZERS)
+        target_compile_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+        target_link_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak)
+      endif()
   endforeach()
   # eigen
   foreach(mode IN LISTS EIGEN_MODES)
       add_executable(scheduling_dist_${mode}_${scheduling_measure_mode} scheduling_dist.cpp)
       target_compile_definitions(scheduling_dist_${mode}_${scheduling_measure_mode} PRIVATE EIGEN_MODE=${mode} SCHEDULING_MEASURE_MODE=${scheduling_measure_mode})
       target_link_libraries(scheduling_dist_${mode}_${scheduling_measure_mode} TBB::tbb)
+      if (USE_SANITIZERS)
+        target_compile_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+        target_link_options(scheduling_dist_${mode}_${scheduling_measure_mode} PUBLIC -fsanitize=address,undefined,leak)
+      endif()
   endforeach()
 endforeach()
