--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -80,7 +80,7 @@ list(APPEND OMP_MODES OMP_STATIC
   OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
   OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
 list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY TBB_RAPID)
-list(APPEND EIGEN_MODES EIGEN_SIMPLE EIGEN_RAPID)
+list(APPEND EIGEN_MODES EIGEN_SIMPLE EIGEN_RAPID EIGEN_TIMESPAN)
 
 list(APPEND BENCHMARKS bench_spmv_balanced bench_spmv_unbalanced bench_reduce bench_scan)
 foreach(bench IN LISTS BENCHMARKS)
@@ -88,23 +88,40 @@ foreach(bench IN LISTS BENCHMARKS)
     add_executable(${bench}_SERIAL ${bench}.cpp)
     target_compile_definitions(${bench}_SERIAL PRIVATE SERIAL=1)
     target_link_libraries(${bench}_SERIAL benchmark::benchmark)
+    if (USE_SANITIZERS)
+      target_compile_options(${bench}_SERIAL PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+      target_link_options(${bench}_SERIAL PUBLIC -fsanitize=address,undefined,leak)
+    endif()
+
     # openmp
     foreach(mode IN LISTS OMP_MODES)
         add_executable(${bench}_${mode} ${bench}.cpp)
         target_compile_definitions(${bench}_${mode} PRIVATE OMP_MODE=${mode})
         target_link_libraries(${bench}_${mode} benchmark::benchmark OpenMP::OpenMP_CXX)
+        if (USE_SANITIZERS)
+          target_compile_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+          target_link_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak)
+        endif()
     endforeach()
     # tbb
     foreach(mode IN LISTS TBB_MODES)
         add_executable(${bench}_${mode} ${bench}.cpp)
         target_compile_definitions(${bench}_${mode} PRIVATE TBB_MODE=${mode})
         target_link_libraries(${bench}_${mode} benchmark::benchmark TBB::tbb)
+        if (USE_SANITIZERS)
+          target_compile_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+          target_link_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak)
+        endif()
     endforeach()
     # eigen
     foreach(mode IN LISTS EIGEN_MODES)
       add_executable(${bench}_${mode} ${bench}.cpp)
       target_compile_definitions(${bench}_${mode} PRIVATE EIGEN_MODE=${mode})
       target_link_libraries(${bench}_${mode} benchmark::benchmark TBB::tbb)
+      if (USE_SANITIZERS)
+        target_compile_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
+        target_link_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak)
+      endif()
     endforeach()
 endforeach()
 
