--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -117,7 +117,10 @@ foreach(bench IN LISTS BENCHMARKS)
     foreach(mode IN LISTS EIGEN_MODES)
       add_executable(${bench}_${mode} ${bench}.cpp)
       target_compile_definitions(${bench}_${mode} PRIVATE EIGEN_MODE=${mode})
-      target_link_libraries(${bench}_${mode} benchmark::benchmark TBB::tbb)
+      target_link_libraries(${bench}_${mode} benchmark::benchmark)
+      if (mode MATCHES "EIGEN_RAPID")
+        target_link_libraries(${bench}_${mode} TBB::tbb)
+      endif()
       if (USE_SANITIZERS)
         target_compile_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak -fno-sanitize-recover=all)
         target_link_options(${bench}_${mode} PUBLIC -fsanitize=address,undefined,leak)
