--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -80,7 +80,7 @@ list(APPEND OMP_MODES OMP_STATIC
   OMP_GUIDED_MONOTONIC OMP_GUIDED_NONMONOTONIC
   OMP_RUNTIME_MONOTONIC OMP_RUNTIME_NONMONOTONIC)
 list(APPEND TBB_MODES TBB_SIMPLE TBB_AUTO TBB_AFFINITY TBB_CONST_AFFINITY TBB_RAPID)
-list(APPEND EIGEN_MODES EIGEN_SIMPLE EIGEN_TIMESPAN EIGEN_RAPID)
+list(APPEND EIGEN_MODES EIGEN_SIMPLE EIGEN_TIMESPAN EIGEN_RAPID EIGEN_STATIC)
 
 list(APPEND BENCHMARKS bench_spmv_balanced bench_spmv_unbalanced bench_reduce bench_scan)
 foreach(bench IN LISTS BENCHMARKS)
