--- a/benchmarks/tests/CMakeLists.txt
+++ b/benchmarks/tests/CMakeLists.txt
@@ -2,32 +2,11 @@ list(APPEND TESTS scan_tests spmv_tests)
 
 get_filename_component(PARENT_DIR ../ ABSOLUTE)
 include_directories(${PARENT_DIR})
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 foreach(test IN LISTS TESTS)
-  # serial
-  add_executable(${test}_SERIAL ${test}.cpp)
-  target_compile_definitions(${test}_SERIAL PRIVATE SERIAL=1)
-  target_link_libraries(${test}_SERIAL gtest ${GTEST_MAIN_LIBRARIES})
-  # openmp
-  foreach(mode IN LISTS OMP_MODES)
-      add_executable(${test}_${mode} ${test}.cpp)
-      target_compile_definitions(${test}_${mode} PRIVATE OMP_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest ${GTEST_MAIN_LIBRARIES} OpenMP::OpenMP_CXX)
-  endforeach()
-  # tbb
-  foreach(mode IN LISTS TBB_MODES)
-      add_executable(${test}_${mode} ${test}.cpp)
-      target_compile_definitions(${test}_${mode} PRIVATE TBB_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest ${GTEST_MAIN_LIBRARIES} TBB::tbb)
-  endforeach()
-  # eigen
-  foreach(mode IN LISTS EIGEN_MODES)
-      add_executable(${test}_${mode} ${test}.cpp)
-      target_compile_definitions(${test}_${mode} PRIVATE EIGEN_MODE=${mode})
-      target_link_libraries(${test}_${mode} gtest ${GTEST_MAIN_LIBRARIES} TBB::tbb)
-      if (mode MATCHES "EIGEN_RAPID")
-        target_link_libraries(${test}_${mode} TBB::tbb)
-      endif()
+  foreach(mode IN LISTS MODES)
+      set(target ${test}_${mode})
+      add_target(${target} ${test}.cpp ${mode})
+      target_link_libraries(${target} gtest ${GTEST_MAIN_LIBRARIES})
   endforeach()
 endforeach()
